objects/fcio1__Policy_SetUp__mdt.object
<CustomObject>
    <fields>
        <fullName>fcio1__Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
                <value>
                    <fullName>MIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Criteria__c</fullName>
        <label>Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIELD COMPARE</fullName>
                    <default>true</default>
                    <label>FIELD COMPARE</label>
                </value>
                <value>
                    <fullName>LITERAL</fullName>
                </value>
                <value>
                    <fullName>TIE BREAKER</fullName>
                </value>
                <value>
                    <fullName>FUZZY LOGIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Field_1_Object__c</fullName>
        <label>Field 1 Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Field_1__c</fullName>
        <label>Field 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Field_2_Object__c</fullName>
        <label>Field 2 Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Field_2__c</fullName>
        <label>Field 2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Module_Name__c</fullName>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal To</fullName>
                    <default>true</default>
                    <label>Equal To</label>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than or Equal To</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Less Than or Equal To</fullName>
                </value>
                <value>
                    <fullName>Not Equal To</fullName>
                </value>
                <value>
                    <fullName>Contains Any</fullName>
                </value>
                <value>
                    <fullName>Contains All</fullName>
                </value>
                <value>
                    <fullName>Does Not Contain</fullName>
                </value>
                <value>
                    <fullName>Fuzzy Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__String__c</fullName>
        <label>String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fullcast Policy Rules</label>
    <pluralLabel>Fullcast Policy Rules</pluralLabel>
    <validationRules>
        <fullName>fcio1__Order_Validation_Rule</fullName>
        <active>true</active>
        <description>Order should Start for One</description>
        <errorConditionFormula>fcio1__Order__c =  0</errorConditionFormula>
        <errorDisplayField>fcio1__Order__c</errorDisplayField>
        <errorMessage>Order cannot be 0.</errorMessage>
    </validationRules>
</CustomObject>